# talonsight

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/exachat/: __init__.py  app.py  app_builder.py  builder.py  core.py  llm.py  schema.py
src/exachat/knowledge_base/: advanced_analytics.json  customer_analytics.json  ec_customer_lifecycle.json  ec_customer_lifecycle_level_2.json  ec_funnel_conversion.json  ec_funnel_conversion_level_2.json  ec_inventory_merchandising.json  ec_inventory_merchandising_level_2.json  ec_orders_revenue.json  ec_orders_revenue_level_2.json  ecommerce.json  fin_revenue.json  fin_revenue_level_2.json  fin_unit_economics.json  finance.json  joins.json  mkt_attribution_spend.json  mkt_campaign_performance_level_2.json  prod_engagement.json  prod_engagement_level_2.json  web_analytics.json
src/exasolchat/: app.py
src/talonsight/: agent.py  app.py  cli.py  core.py  hermes_bootstrap.py  kb.py  mcp_server.py  preferences.py
