[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exasolchat"
version = "0.1.1"
description = "Safe text-to-SQL for ExasolDB (and others) with local LLMs, RAG memory, and interactive charts."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "exasolchat contributors"}]
keywords = ["sql", "exasol", "llm", "text-to-sql", "streamlit", "ollama", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyexasol>=0.25",
    "duckdb>=0.10",
    "sqlalchemy>=2.0",
    "sqlalchemy-exasol>=5.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "altair>=5.2",
    "pandas>=2.0",
    "httpx>=0.25",
    "chromadb>=0.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
all = ["psycopg2-binary>=2.9", "pymysql>=1.1"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
exasolchat = "exasolchat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
